--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.1",
