--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@babel/types": "^7.22.5",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "bootstrap": "^5.2.3",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
