--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.9",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.3.1",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
